# thevalley

./: Cargo.toml  Makefile  README.md  flake.nix  i18n.toml  module.nix  resetDocker.sh  service.nix  thevalley.nix  thevalley_docker.nix
client/: Cargo.toml
client/i18n/pot/: webtarot_client.pot
client/i18n/pot/src/: lib.pot
client/i18n/pot/src/components/: bidding_actions.pot  call_king_action.pot  chat_box.pot  mod.pot  player_list.pot  scores.pot
client/i18n/pot/src/views/: game.pot  menu.pot  mod.pot  start.pot
client/scss/: webtarot.scss
client/src/: lib.rs
client/src/components/: mod.rs  player_list.rs
client/src/views/: game.rs  menu.rs  start.rs
client/static/: index.html  webtarot.css  webtarot.css.map
docs/: todo.md
game/: Cargo.toml
game/src/: being.rs  cards.rs  deal.rs  lib.rs  points.rs  pos.rs  star.rs  trick.rs
protocol/: Cargo.toml
protocol/src/: deal.rs  game.rs  game_messages.rs  lib.rs  message.rs  player.rs  turn.rs
server/: Cargo.toml
server/src/: dispatcher.rs  main.rs
